# cmake_learn

cmake_install_learn/b/: CMakeLists.txt
cmake_install_learn/b/src/: CMakeLists.txt  main.cpp
cmake_install_learn/install/lib/cmake/a/: aConfig.cmake  aTargets-release.cmake  aTargets.cmake
cmake_install_learn/liba/: CMakeLists.txt  CMakeUserPresets.json  conanfile.txt
cmake_install_learn/liba/cmake/: aConfig.cmake
cmake_install_learn/liba/include/: liba.h
cmake_install_learn/liba/src/: CMakeLists.txt  liba.cpp
